Added mock dependency to requirements-dev.txt

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -6,7 +6,6 @@ ipdb==0.2
 ipython==0.10.1
 wsgiref==0.1.2
 flake8==0.8
--e git+https://github.com/toastdriven/django-haystack.git@master#egg=django-haystack
 pysolr==2.0.13
-BeautifulSoup==3.2.0
 PyZen==0.3.1
+mock==0.7.0
