Included static files + oscar default fixtures in MANIFEST.in and added "include_package_data = True" to setup class (seems required for python 2.7.1 on  MacOSX Lion)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,5 @@
 include *.rst
 recursive-include oscar/templates *.txt *.html
 recursive-include oscar/apps *.json
+recursive-include oscar/fixtures *.json
+recursive-include oscar/static *
