Updated server config and settings to allow logging of errors

--- a/sandbox/deploy/nginx/sandbox.conf
+++ b/sandbox/deploy/nginx/sandbox.conf
@@ -2,12 +2,19 @@ server {
     listen 80;
     server_name sandbox.oscar.tangentlabs.co.uk;
 
-    access_log /var/log/nginx/sandbox.oscar.log;
-    error_log /var/log/nginx/sandbox.oscar.log;
+    access_log /var/log/nginx/access.sandbox.oscar.log;
+    error_log /var/log/nginx/error.sandbox.oscar.log;
 
     gzip on;
     gzip_proxied any;
     gzip_types text/plain application/json;
+
+	location /media/ {
+		root /var/www/oscar/django-oscar/sandbox/public;
+	}
+	location /static/ {
+		root /var/www/oscar/django-oscar/sandbox/public;
+	}
 
     proxy_pass_request_headers on;
     proxy_set_header Host $host;
