Updated sandbox server configs to support passing encoded slashes around

--- a/sandbox/deploy/apache2/sandbox.conf
+++ b/sandbox/deploy/apache2/sandbox.conf
@@ -3,6 +3,7 @@
     DocumentRoot /var/www/nginx-default
     CustomLog /var/log/apache2/access.sandbox.oscar.log combined
     ErrorLog /var/log/apache2/error.sandbox.oscar.log
+	AllowEncodedSlashes On
 
     WSGIDaemonProcess oscar processes=2 threads=5 display-name=oscar maximum-requests=10000
     WSGIProcessGroup oscar
