--- a/sandbox/deploy/nginx/sandbox.conf
+++ b/sandbox/deploy/nginx/sandbox.conf
@@ -23,6 +23,6 @@ server {
     proxy_read_timeout 120;
 
     location / {
-        proxy_pass http://localhost:81/;
+        proxy_pass http://localhost:81;
     }
 }
