Updated server config files for new qa site

--- a/sandbox/deploy/apache2/qa.conf
+++ b/sandbox/deploy/apache2/qa.conf
@@ -1,17 +1,17 @@
 <VirtualHost *>
-    ServerName sandbox.oscar.tangentlabs.co.uk
+    ServerName qa.oscar.tangentlabs.co.uk
     DocumentRoot /var/www/nginx-default
-    CustomLog /var/log/apache2/access.sandbox.oscar.log combined
-    ErrorLog /var/log/apache2/error.sandbox.oscar.log
+    CustomLog /var/log/apache2/access.qa.oscar.log combined
+    ErrorLog /var/log/apache2/error.qa.oscar.log
 	AllowEncodedSlashes On
 
     WSGIDaemonProcess oscar processes=2 threads=5 display-name=oscar maximum-requests=10000
     WSGIProcessGroup oscar
     WSGIApplicationGroup %{GLOBAL}
-    WSGIScriptAlias / /var/www/oscar/builds/sandbox/sandbox/deploy/wsgi/sandbox.wsgi
+    WSGIScriptAlias / /var/www/oscar/builds/qa/sandbox/deploy/wsgi/qa.wsgi
     WSGIPassAuthorization On
     
-    <Directory /var/www/oscar/builds/sandbox/sandbox/deploy/wsgi>
+    <Directory /var/www/oscar/builds/qa/sandbox/deploy/wsgi>
         Order deny,allow
         Allow from all
     </Directory>
