Updated nginx/apache config for large POSTs.
Plus created separate update scripts for sandbox and QA builds.

--- a/sandbox/deploy/nginx/qa.conf
+++ b/sandbox/deploy/nginx/qa.conf
@@ -9,6 +9,8 @@ server {
     gzip_proxied any;
     gzip_types text/plain application/json;
 
+	client_max_body_size = 3M
+
 	location /media/ {
 		root /var/www/oscar/builds/qa/sandbox/assets;
 	}
