Tweaks to QA server config

--- a/sandbox/deploy/apache2/qa.conf
+++ b/sandbox/deploy/apache2/qa.conf
@@ -5,8 +5,8 @@
     ErrorLog /var/log/apache2/error.qa.oscar.log
 	AllowEncodedSlashes On
 
-    WSGIDaemonProcess oscar processes=2 threads=5 display-name=oscar maximum-requests=10000
-    WSGIProcessGroup oscar
+    WSGIDaemonProcess oscar-qa processes=2 threads=5 display-name=oscar maximum-requests=10000
+    WSGIProcessGroup oscar-qa
     WSGIApplicationGroup %{GLOBAL}
     WSGIScriptAlias / /var/www/oscar/builds/qa/sandbox/deploy/wsgi/qa.wsgi
     WSGIPassAuthorization On
