--- a/sites/sandbox/deploy/apache2/qa.conf
+++ b/sites/sandbox/deploy/apache2/qa.conf
@@ -1,5 +1,6 @@
 <VirtualHost *>
     ServerName qa.oscar.tangentlabs.co.uk
+    ServerAlias qa.oscarcommerce.com
     DocumentRoot /var/www/nginx-default
     CustomLog /var/log/apache2/access.qa.oscar.log combined
     ErrorLog /var/log/apache2/error.qa.oscar.log
@@ -8,10 +9,10 @@
     WSGIDaemonProcess oscar-qa processes=2 threads=5 display-name=oscar maximum-requests=10000
     WSGIProcessGroup oscar-qa
     WSGIApplicationGroup %{GLOBAL}
-    WSGIScriptAlias / /var/www/oscar/builds/qa/sandbox/deploy/wsgi/qa.wsgi
+    WSGIScriptAlias / /var/www/oscar/builds/qa/sites/sandbox/deploy/wsgi/qa.wsgi
     WSGIPassAuthorization On
 
-    <Directory /var/www/oscar/builds/qa/sandbox/deploy/wsgi>
+    <Directory /var/www/oscar/builds/qa/sites/sandbox/deploy/wsgi>
         Order deny,allow
         Allow from all
     </Directory>
