Update server config for demo site

--- a/sites/demo/deploy/apache2/demo.conf
+++ b/sites/demo/deploy/apache2/demo.conf
@@ -1,5 +1,6 @@
 <VirtualHost *>
     ServerName demo.oscarcommerce.com
+    ServerAlias demo.oscar.tangentlabs.co.uk
     DocumentRoot /var/www/nginx-default
     CustomLog /var/log/apache2/access.demo.oscar.log combined
     ErrorLog /var/log/apache2/error.demo.oscar.log
