--- a/sites/demo/deploy/nginx/demo.conf
+++ b/sites/demo/deploy/nginx/demo.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name demo.oscarcommerce.com;
+    server_name demo.oscarcommerce.com demo.oscar.tangentlabs.co.uk;
 
     access_log /var/log/nginx/access.demo.oscar.log;
     error_log /var/log/nginx/error.demo.oscar.log;
