Add new domain names to sandbox apache/nginx config files
Now using new *.oscarcommerce.com domains.

--- a/sites/sandbox/deploy/apache2/sandbox.conf
+++ b/sites/sandbox/deploy/apache2/sandbox.conf
@@ -1,5 +1,6 @@
 <VirtualHost *>
     ServerName sandbox.oscar.tangentlabs.co.uk
+    ServerAlias latest.oscarcommerce.com
     DocumentRoot /var/www/nginx-default
     CustomLog /var/log/apache2/access.sandbox.oscar.log combined
     ErrorLog /var/log/apache2/error.sandbox.oscar.log
