--- a/sites/sandbox/deploy/nginx/qa.conf
+++ b/sites/sandbox/deploy/nginx/qa.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name qa.oscar.tangentlabs.co.uk;
+    server_name qa.oscar.tangentlabs.co.uk qa.oscarcommerce.com;
 
     access_log /var/log/nginx/access.qa.oscar.log;
     error_log /var/log/nginx/error.qa.oscar.log;
