--- a/sites/sandbox/deploy/nginx/sandbox.conf
+++ b/sites/sandbox/deploy/nginx/sandbox.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name sandbox.oscar.tangentlabs.co.uk;
+    server_name sandbox.oscar.tangentlabs.co.uk latest.oscarcommerce.com;
 
     access_log /var/log/nginx/access.sandbox.oscar.log;
     error_log /var/log/nginx/error.sandbox.oscar.log;
